--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "prop-types": "^15.7.2",
+    "shortid": "^2.2.16",
+    "push-dir": "^0.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
